# candlestick-chart-annotator

./: INSTALL.md  README.md  pyproject.toml  requirements.txt  setup.py
candlestick-chart-annotator/: annotation_viewer.py  app.py  data_provider.py  db_manager.py  fyers.py  migrate_data.py  setup_db.py
candlestick-chart-annotator/static/css/: annotations.css
candlestick-chart-annotator/static/js/: annotations.js  chart-annotations.js  chart-debug.js  data_management.js  test-annotation.html
candlestick-chart-annotator/templates/: data_management.html  index.html
