[project]
name = "data-annotator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.7.0",
    "dash>=3.0.0",
    "eventlet>=0.39.1",
    "flask==3.0.2",
    "flask-caching==2.1.0",
    "flask-socketio>=5.5.1",
    "gevent>=24.11.1",
    "ipykernel>=6.29.5",
    "keyboard>=0.13.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "plotly==5.19.0",
    "python-dateutil==2.8.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
    "streamlit-bokeh-events>=0.1.2",
    "streamlit-plotly-events>=0.0.6",
    "tabulate>=0.9.0",
    "xgboost>=3.0.0",
    "yfinance==0.2.36",
]
